<resources>
    <string name="app_name">WallPack</string>
    <string name="title_home">Home</string>
    <string name="photo_collections">Collection</string>
    <string name="trending">Featured</string>
    <string name="photo_search">Search</string>
    <string name="action_settings">Setting</string>
    <string name="account_image">Account Image</string>
    <string name="unsplash_photo">Photo from Unsplash.com</string>
    <string name="share_via">Share via</string>
    <string name="search_hint">Search Photo,User,Collection....</string>
    <string name="clear_search_bar">Clear Search</string>
    <string name="login_btn">Login</string>
    <string name="join_btn">Join</string>

    <!-- Fab String -->
    <string name="stats">Stats</string>
    <string name="photo_info">Info</string>
    <string name="bottomSheetContent">Content</string>
    <string name="set_as_wallpaper">Set as wallpaper</string>
    <string name="download">Download</string>
    <string name="setting_wallpaper">Setting wallpaper&#8230;</string>
    <string name="cancel">Cancel</string>
    <string name="download_started">Download started</string>

    <string name="theme_name_tokyo">Tokyo</string>
    <string name="theme_name_illini">Illini</string>
    <string name="theme_name_sea_foam">Sea Foam</string>

    <string name="theme_desc_tokyo">Light</string>
    <string name="theme_desc_illini">Dark</string>
    <string name="theme_desc_sea_foam">Light, dark action bar</string>

    <string name="primary">Primary</string>
    <string name="primary_dark">Primary Dark</string>
    <string name="accent">Accent</string>
    <string name="normal">Normal</string>
    <string name="background">Background</string>
    <string name="foreground">Foreground</string>

    <string name="sample_text_summary">TextAppearances are styles applied specific to text. Android provides different text colors attributes that can be set in your custom theme and will be used with different text appearances. The value of a textColor can either be a simple color or a selector.</string>
    <string name="sample_text_primary">android:textColorPrimary</string>
    <string name="sample_text_secondary">android:textColorSecondary</string>
    <string name="sample_text_tertiary">android:textColorTertiary</string>
    <string name="sample_text_link"><a href="https://www.example.com">android:textColorLink</a></string>
    <string name="sample_text_summary_inverse">For each text color attribute, there is a corresponding inverse color.</string>
    <string name="sample_text_primary_inverse">android:textColorPrimaryInverse</string>
    <string name="sample_text_secondary_inverse">android:textColorSecondaryInverse</string>
    <string name="sample_text_tertiary_inverse">android:textColorTertiaryInverse</string>
    <string name="sample_text_link_inverse">android:textColorLinkInverse</string>
    <string name="photos">%1$s Photos</string>
    <string name="transition_collection_background">collection_background</string>
    <string name="transition_collection_avatar">collection_avatar</string>
    <!--menu -->


    <string name="sort_menu">Sort By</string>
    <string name="menu_latest">Latest</string>
    <string name="menu_old">Oldest</string>
    <string name="menu_popular">Popular</string>
    <string name="todo">TODO</string>
    <string name="title_activity_search__photos">Search_Photos</string>

    <!--    -->
    <string name="feedback_views">Views</string>
    <string name="feedback_downloads">Downloads</string>
    <string name="feedback_likes">Likes</string>
    <string name="feedback_size">Size</string>
    <string name="feedback_color">Color</string>
    <string name="feedback_location">Location</string>
    <string name="feedback_camera_make">Camera make</string>
    <string name="feedback_camera_model">Camera model</string>
    <string name="feedback_exposure">Exposure time</string>
    <string name="feedback_aperture">Aperture</string>
    <string name="feedback_focal">Focal length</string>
    <string name="feedback_iso">Iso</string>

</resources>
