<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ DayTime:9/16/18 2:09 PM :
  ~ Year:2018 :
  ~ Author:bini :
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/menu_top"
        android:checkableBehavior="single">
    <item
        android:id="@+id/photo_collection"
        android:icon="@drawable/ic_baseline_photo_library_24px"
        android:title="@string/photo_collections" />

    <item
        android:id="@+id/featured"
        android:icon="@drawable/ic_fire"
        android:title="@string/trending" />
    </group>
    <group
    android:id="@+id/menu_bottom"
    android:checkableBehavior="none">

    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/action_settings" />

    </group>
</menu>
