<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ DayTime:9/15/18 11:53 AM :
  ~ Year:2018 :
  ~ Author:bini :
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.myapplication.MainActivity">

    <item android:id="@+id/sort_by"
        android:title="@string/sort_menu"
        android:icon="?attr/sortIcon"
        app:showAsAction="ifRoom">
        <menu>
            <group android:checkableBehavior="none">
                <item android:id="@+id/menu_item_featured_latest"
                    android:title="@string/menu_latest"
                    android:icon="?attr/newIcon"/>

                <item android:id="@+id/menu_item_featured_oldest"
                    android:title="@string/menu_old"
                    android:icon="?attr/oldIcon"/>
            </group>
        </menu>
    </item>
</menu>